--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ Technical-Note-GPR.aux
 Technical-Note-GPR.log
 Technical-Note-GPR.bbl
 Technical-Note-GPR.blg
+.DS_Store
+Technical-Note-GPR-blx.bib
+Technical-Note-GPR.bcf
+Technical-Note-GPR.run.xml
